2019-07-18  larissa9839  <larissa9839@gmail.com>

	* tryXpath/popup/popup.css (body):
        When the checkboxes stete change, sometimes the popup blinks. To
	prevent this problem, specify background-color to the body
	element.

2019-07-15  larissa9839  <larissa9839@gmail.com>

	* tryXpath/pages/show_all_results.css (table):
	Specify font-family to table.

2019-07-14  larissa9839  <larissa9839@gmail.com>

	* tryXpath/popup/popup.css :
	Add font-family.

2019-01-13  larissa9839  <larissa9839@gmail.com>

	* xpis/.gitignore:
	Make .gitignore file in the xpis directory to keep it.

	* makefile (firefox-unit-test):
	Remove firefox-unit-test target.

2018-08-02  larissa9839  <larissa9839@gmail.com>

	* tryXpath/manifest.json:
	Change version. 1.3.3 -> 1.3.4

	* tryXpath/popup/popup.js: 
	Modify sendToSpecifiedFrame function to use detail.runAt.

2018-07-20  larissa9839  <larissa9839@gmail.com>

	* tryXpath/popup/popup.js:
	Modify execContentScript function to use detail.runAt.
	Modify "get-all-frame-id" click listener to use detail.runAt.

2018-03-17  larissa9839  <larissa9839@gmail.com>

	* tryXpath/manifest.json:
	Change "strict_min_version". "52.0" -> "53.0"
	Change version. 1.3.1 -> 1.3.3

2018-01-25  larissa9839  <larissa9839@gmail.com>

	* tryXpath/manifest.json:
	Change version. 1.3.1b1 -> 1.3.1

	* tryXpath/popup/popup.html (Main):
	Add none class to the frame-designation widget.

	* tryXpath/popup/popup.js:
	Remove codes sending initializeBlankWindows event in sendToSpecifiedFrame function.

	* tryXpath/scripts/try_xpath_content.js:
	Remove genericListener.listeners.initializeBlankWindows function.

2018-01-24  larissa9839  <larissa9839@gmail.com>

	* tryXpath/background/try_xpath_background.js:
	Use detail.matchAboutBlank parameter when insertCSS is called.
	Use detail.matchAboutBlank parameter when removeCSS is called.

	* tryXpath/popup/popup.js:
	Use detail.matchAboutBlank parameter when executeScript is called.

	* tryXpath/manifest.json: