@@ -1,3 +1,9 @@
+2019-07-20  larissa9839  <larissa9839@gmail.com>
+
+	* tryXpath/scripts/try_xpath_functions.js:
+	Define makeDetailText function.
+	
+
 2019-07-18  larissa9839  <larissa9839@gmail.com>
 
 	* tryXpath/popup/popup.css (body):
